--- a/js-sandbox/package.json
+++ b/js-sandbox/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "ramda": "^0.27.1",
     "url-pattern": "^1.0.3"
   }
 }
